--- a/FrontEnd/templates/about.html
+++ b/FrontEnd/templates/about.html
@@ -25,7 +25,7 @@
 	<!-- magnific popup -->
 	<link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 	<!-- animate css -->
-	<link rel="stylesheet" href="{% static 'css/animate.css' %}">
+	<link rel="stylesheet" href="{% static 'css/anim ate.css' %}">
 	<!-- mean menu css -->
 	<link rel="stylesheet" href="{% static 'css/meanmenu.min.css' %}">
 	<!-- main style -->
@@ -293,7 +293,7 @@ body img{
 	<ul class="team" style="list-style-type: none;">
 		<li><h4>Hana Alfozan</h4></li>
 		<li><h4>Reem Almusharraf</h4></li>
-		<li><h4>Deema Alrasheed</h4></li>
+		<li><h4>Deema Alresheed</h4></li>
 		<li><h4>Reema Alhenaki</h4></li>
 	</ul>
 			</div>
