--- a/FrontEnd/templates/Games.html
+++ b/FrontEnd/templates/Games.html
@@ -912,6 +912,51 @@ $('#clearFilters').on('click', clearAllFilters);
 	<script src="{% static '/js/main.js' %}"></script>
 <script>
 
+ // Function to get the value of a cookie by name
+ function getCookie(name) {
+        var cookieValue = null;
+        if (document.cookie && document.cookie !== '') {
+            var cookies = document.cookie.split(';');
+            for (var i = 0; i < cookies.length; i++) {
+                var cookie = cookies[i].trim();
+                // Check if this cookie string begins with the name we want
+                if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                    break;
+                }
+            }
+        }
+        return cookieValue;
+    }
+
+    // Handle "More info" button click
+    $(document).on('click', '.more-info-btn', function (e) {
+        e.preventDefault();
+        var gameId = $(this).closest('.game-item').data('game-id');
+        window.location.href = `/game_info_page/${gameId}/`;
+
+        // Add the game to recently viewed when "More Info" is clicked
+        addToRecentlyViewed(gameId);
+    });
+
+    // Function to add the game to recently viewed
+    function addToRecentlyViewed(gameId) {
+        $.ajax({
+            url: `/BackEnd/add_to_recently_viewed/${gameId}/`,
+            type: 'POST',
+            dataType: 'json',
+            headers: {
+                'X-CSRFToken': getCookie('csrftoken'),  // Include the CSRF token
+            },
+            success: function (data) {
+                console.log('Added to Recently Viewed:', data);
+                // You can handle success as needed
+            },
+            error: function (error) {
+                console.error('Error making AJAX request:', error);
+            }
+        });
+    }
     // Function to handle the sort change
     function handleSortChange() {
         // Get the selected option
@@ -975,11 +1020,6 @@ function updateGamesContainer(data) {
         gamesContainer.append(gameHTML);
     });
 
-    $('.more-info-btn').on('click', function(e) {
-        e.preventDefault();
-        selectedGameId = $(this).closest('.game-item').data('game-id');
-        window.location.href = `/game_info_page/${selectedGameId}/`;
-    });
 
    var currentPage = data.current_page;
 var totalPages = data.total_pages;
